[tool.poetry]
name = "assets-compass"
version = "0.1.0"
description = ""
authors = ["kostmetallist"]
readme = "README.md"
packages = [{include = "assets_compass"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.97.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
